--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -30,6 +30,8 @@
           <span class="pt-1 form-checked-content">
             {{ task.title }}
             <small class="d-block text-muted" style="margin: 0.1rem 0;">
+              <span data-feather="tag" class="align-text-bottom"></span>
+              {{ task.type|join:", " }},
               <span data-feather="user" class="align-text-bottom"></span>
               {{ task.assignees|join:", " }}
             </small>
