improve report task layout

--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -25,7 +25,7 @@
       <div class="navbar-nav">
         {% if user.is_superuser %}
         <div class="nav-item text-nowrap">
-          <a class="nav-link px-3" href="{% url 'admin:index' %}">Administration</a>
+          <a class="nav-link px-3" href="{% url 'admin:index' %}">Admin</a>
         </div>
         {% endif %}
         <div class="nav-item text-nowrap">
